--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,100 @@
-/*
- * Estilos de tu proyecto
- */
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700&display=swap');
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0 auto;
+    font-size: 16px;
+    line-height: 1.71429;
+    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
+}
+
+.container {
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+
+.container:before,
+.container:after {
+    content: " ";
+    display: table;
+}
+
+.container:after {
+    clear: both;
+}
+
+header {
+    background: #2c3e50;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+}
+
+nav {
+    padding: 18px 0;
+    float: left;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.fancy-nav {
+    overflow: hidden;
+}
+
+.fancy-nav li {
+    list-style: none;
+    width: 203px;
+    float: left;
+    text-align: center;
+    font-size: 20px;
+}
+
+.fancy-nav li a {
+    font-weight: 700;
+    text-decoration: none;
+    color: #fff;
+}
+
+nav.container>div.nav-logo {
+    display: flex;
+    justify-content: flex-end;
+    margin-left: auto;
+}
+
+.nav-logo {
+    list-style: none;
+}
+
+.nav-logo li {
+    font-size: 14px;
+}
+
+.nav-logo li a {
+    text-decoration: none;
+    font-weight: 700;
+    display: block;
+    padding: 0 5px;
+    color: #fff;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
+}
