--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,800&display=swap');
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-*:before,
-*:after {
+*:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -28,8 +27,7 @@ body {
     padding-right: 14px;
 }
 
-.container:before,
-.container:after {
+.container:before, .container:after {
     content: " ";
     display: table;
 }
@@ -55,39 +53,39 @@ nav {
     align-items: center;
 }
 
-.fancy-nav {
+.fancy-slogan {
     overflow: hidden;
 }
 
-.fancy-nav li {
+.fancy-slogan li {
     list-style: none;
-    width: 203px;
+    /* width: 210px; */
     float: left;
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
 }
 
-.fancy-nav li a {
+.fancy-slogan li a {
     font-weight: 700;
     text-decoration: none;
     color: #fff;
 }
 
-nav.container>div.nav-logo {
+nav.container>div.nav-list {
     display: flex;
     justify-content: flex-end;
     margin-left: auto;
 }
 
-.nav-logo {
+.nav-list {
     list-style: none;
 }
 
-.nav-logo li {
+.nav-list li {
     font-size: 14px;
 }
 
-.nav-logo li a {
+.nav-list li a {
     text-decoration: none;
     font-weight: 700;
     display: block;
@@ -97,4 +95,86 @@ nav.container>div.nav-logo {
 
 .text-uppercase {
     text-transform: uppercase;
+}
+
+.wrapper {
+    padding-top: 70px;
+    margin: auto;
+    overflow: hidden;
+    background: #18bc9c;
+}
+
+.wrapper div {
+    text-align: center;
+    color: #fff;
+    padding: 100px 0 50px 0;
+}
+
+.wrapper div h1 {
+    font-size: 60px;
+    font-weight: 800;
+}
+
+.wrapper div h2 {
+    font-weight: 600;
+}
+
+.fancy-box {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 70px 0px;
+}
+
+.fancy-box h2 {
+    font-size: 35px;
+    text-align: center;
+}
+
+.fancy-grid {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 35px;
+}
+
+.fancy-grid div {
+    text-align: center;
+    width: 33.3%;
+    flex-wrap: wrap;
+    margin: 25px 0px;
+}
+
+.fancy-grid div img {
+    width: 200px;
+    padding: 20px 0;
+}
+
+.fancy-work-grid div img {
+    width: 80%;
+}
+
+@media (max-width: 991px) {
+    .fancy-grid div {
+        text-align: center;
+        width: 50%;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 768px) {
+    .wrapper div {
+        padding: 1px 15px;
+    }
+    .wrapper h1 {
+        font-size: 40px;
+        font-weight: 700;
+    }
+    .fancy-grid div {
+        text-align: center;
+        width: 100%;
+        flex-wrap: wrap;
+    }
 }
