--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ body {
     font-size: 16px;
     line-height: 1.71429;
     font-family: 'Montserrat', sans-serif;
-    /* font-family: 'Lato', sans-serif; */
 }
 
 .container {
@@ -46,7 +45,7 @@ header {
 }
 
 nav {
-    padding: 18px 0;
+    padding: 20px 0;
     float: left;
     width: 100%;
     display: flex;
@@ -59,10 +58,9 @@ nav {
 
 .fancy-slogan li {
     list-style: none;
-    /* width: 210px; */
     float: left;
     text-align: center;
-    font-size: 30px;
+    font-size: 24px;
 }
 
 .fancy-slogan li a {
@@ -82,14 +80,18 @@ nav.container>div.nav-list {
 }
 
 .nav-list li {
-    font-size: 14px;
+    font-size: 16px;
+}
+
+.nav-list li a:hover {
+    color: #18bc9c;
 }
 
 .nav-list li a {
     text-decoration: none;
     font-weight: 700;
     display: block;
-    padding: 0 5px;
+    padding: 0 15px;
     color: #fff;
 }
 
@@ -107,30 +109,82 @@ nav.container>div.nav-list {
 .wrapper div {
     text-align: center;
     color: #fff;
-    padding: 100px 0 50px 0;
+    padding: 70px 0 50px 0;
 }
 
 .wrapper div h1 {
-    font-size: 60px;
-    font-weight: 800;
+    font-size: 64px;
+    font-weight: 700;
+    margin-bottom: 0;
 }
 
 .wrapper div h2 {
     font-weight: 600;
+    font-family: 'lato', sans-serif;
 }
 
-.fancy-box {
+.fancy-line-divider {
+    padding: 0 !important;
+
+    margin: 0rem 0 1.5rem 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.fancy-line-divider div {
+    padding: 0 !important;
+}
+
+.fancy-line-divider.divider-light .line {
+    background-color: #fff;
+}
+
+.fancy-line-divider.divider-light .fancy-icon-star {
+    color: #fff;
+    font-size: 2rem;
+}
+
+.fancy-line-divider .fancy-icon-star {
+    color: #2c3e50;
+    font-size: 2rem;
+}
+
+.fancy-line-divider .line {
+    width: 100%;
+    max-width: 7rem;
+    height: .25rem;
+    background-color: #2c3e50;
+    border-radius: 1rem;
+    border-color: #2c3e50!important;
+}
+
+.fancy-line-divider .line:first-child {
+    margin-right: 1rem;
+}
+
+.fancy-line-divider .line:last-child {
+    margin-left: 1rem;
+}
+
+.fancy-style {
     width: 100%;
     margin: auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.fancy-box {
     padding: 70px 0px;
 }
 
 .fancy-box h2 {
-    font-size: 35px;
-    text-align: center;
+    font-size: 48px;
+    text-align: center;    
+    color: #2c3e50;
+    margin-bottom: 0;
 }
 
 .fancy-grid {
@@ -149,11 +203,204 @@ nav.container>div.nav-list {
 
 .fancy-grid div img {
     width: 200px;
-    padding: 20px 0;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .fancy-work-grid div img {
-    width: 80%;
+    width: 90%;
+}
+
+.fancy-box-about {
+    background: #18bc9c;
+    padding: 100px 0px;
+    color: #fff;
+}
+
+.fancy-box-about h2 {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 0;
+}
+
+.fancy-grid-about {
+    font-family: 'Lato', sans-serif;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 35px;
+}
+
+.fancy-grid-about div.grid-item {
+    width: 50%;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 0 50px;
+}
+
+.grid-item p {
+    text-align: left;
+    display: block;
+    font-size: 20px;
+}
+
+.fancy-box-about .btn-download {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.btn-download button {
+    font-family: 'Lato', sans-serif;
+    background: #18bc9c;
+    color: #fff;
+    padding: 16px 28px;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    outline: none;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.btn-download button:hover {
+    background: #fff;
+    color: #000;
+}
+
+.fancy-box-form {
+    padding: 90px 0px;
+    color: #000;
+}
+
+.fancy-box-form h2 {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 0;
+    color: #2c3e50;
+}
+
+.box-form {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    width: 50%;
+}
+
+form div {
+    margin-bottom: 20px;
+}
+
+form div input, textarea {
+    display: block;
+    width: 100%;
+    padding: 20px 0px 10px 0px;
+    border: none;
+    border-bottom: 1px solid #ededed;
+    outline: none;
+    font-size: 24px;
+    font-family: 'lato', sans-serif;
+}
+
+form div textarea {
+    height: 170px;
+    resize: none;
+}
+
+.btn-send {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.btn-send button {
+    font-family: 'Lato', sans-serif;
+    background: #18bc9c;
+    color: #fff;
+    padding: 16px 28px;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    outline: none;
+    cursor: pointer;
+    font-size: 20px;
+    width: 100%;
+}
+
+.btn-send button:hover {
+    background: #159a80;
+    border-color: #148f77;
+}
+
+footer {
+    outline: 1px solid firebrick;
+    background: #2c3e50;
+    color: #fff;
+}
+
+footer h3 {
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+footer p.fancy-p-footer {
+    width: 70%;
+    margin: auto;
+    font-size: 20px;
+    font-family: 'lato', sans-serif;
+}
+
+footer p.fancy-p-footer-2 {
+    width: 90%;
+    margin: auto;
+    font-size: 20px;
+    font-family: 'lato', sans-serif;
+}
+
+
+footer p span {
+    color: #18bc9c;
+}
+
+.social-brands {
+    display: inline-flex;
+    width: 100% !important;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 !important;
+    background: #2c3e50;
+}
+
+.social-brands a {
+    text-decoration: none;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: 3.25rem;
+    height: 3.25rem;
+    font-size: 1.25rem;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    margin: 0 5px;
+}
+
+.social-brands a:hover {
+    background: #fff;
+    color: #2c3e50;
+}
+
+.copyright-box {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    background: #212529;
+    margin: 0px !important;
+    width: 100%;
+    padding: 15px;
+    font-size: 16px !important;
 }
 
 @media (max-width: 991px) {
@@ -162,11 +409,16 @@ nav.container>div.nav-list {
         width: 50%;
         flex-wrap: wrap;
     }
+    .fancy-grid-about div.grid-item {
+        width: 100%;
+        flex-wrap: wrap;
+        margin: 0px;
+    }
 }
 
 @media (max-width: 768px) {
     .wrapper div {
-        padding: 1px 15px;
+        padding: 80px 15px;
     }
     .wrapper h1 {
         font-size: 40px;
@@ -176,5 +428,12 @@ nav.container>div.nav-list {
         text-align: center;
         width: 100%;
         flex-wrap: wrap;
+    }
+    .fancy-slogan li {
+        font-size: 20px;
+    }   
+
+    form {
+        width: 80%;
     }
 }
